# CiteClaw

./: README.md  annotate_graph.py  modal_vllm_server.py  pyproject.toml
plans/: database_search_roadmap.md
src/citeclaw/: __main__.py  meta_review.py  progress.py
src/citeclaw/agents/: iterative_search.py
src/citeclaw/clients/: pdfclaw_bridge.py
src/citeclaw/filters/: runner.py
src/citeclaw/filters/atoms/: citation.py
src/citeclaw/steps/: expand_backward.py  expand_by_search.py  expand_forward.py
tests/: test_filters_atoms.py
