[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citeclaw"
version = "0.1.0"
description = "Snowballing-based literature acquisition system for systematic literature reviews"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "python-igraph>=0.11,<1",
    "tenacity>=8.2,<10",
    "openai>=1.10,<2",
    "google-genai>=1.0,<2",
    "pyyaml>=6.0,<7",
    "rich>=13.0,<15",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]
topic_model = [
    "umap-learn>=0.5,<1",
    "hdbscan>=0.8.33,<1",
    "scikit-learn>=1.3,<2",
    "numpy>=1.24,<3",
]
pdf = [
    # PyMuPDF (``import pymupdf``) backs the default lightweight engine
    # in ``pdfclaw.parsers`` — fast, in-process, good reading order on
    # most academic PDFs.  AGPL licensed.
    "pymupdf>=1.24,<2",
]
docling = [
    # IBM Docling — the recommended high-quality CPU/GPU parser
    # registered as ``pdfclaw.parsers.DoclingParser``.  Pure-Python
    # install (single line); model weights download on first run.
    # Pick this when extraction quality on multi-column layouts and
    # tables matters more than speed.
    "docling>=2.0,<3",
]
web = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
]
browser = [
    # pdfclaw — institutional-auth PDF fetcher driving a real Chrome
    # via Playwright. Needs both the Python package AND the chromium
    # binary, which is downloaded by ``python -m playwright install
    # chromium`` after the pip install.
    "playwright>=1.40,<2",
    "pymupdf>=1.24,<2",
]
all = [
    "citeclaw[pdf,docling,topic_model,web,browser]",
]

[project.scripts]
citeclaw = "citeclaw.__main__:main"
pdfclaw = "pdfclaw.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/citeclaw", "src/pdfclaw"]

[tool.ruff]
target-version = "py311"
line-length = 120
